--- a/GitUI/GitUI.csproj
+++ b/GitUI/GitUI.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Atlassian.SDK">
+      <Version>10.5.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft-WindowsAPICodePack-Core">
       <Version>1.1.3.3</Version>
     </PackageReference>
@@ -76,6 +79,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AlastriIntegration.cs" />
     <Compile Include="AutoCompletion\CommitAutoCompleteProvider.cs" />
     <Compile Include="AutoCompletion\IAutoCompleteProvider.cs" />
     <Compile Include="Avatars\AvatarDownloader.cs" />
@@ -146,6 +150,12 @@
     <Compile Include="CommandsDialogs\BrowseDialog\MenuCommand.cs" />
     <Compile Include="CommandsDialogs\BrowseDialog\MenuCommandsBase.cs" />
     <Compile Include="CommandsDialogs\FormBrowseController.cs" />
+    <Compile Include="CommandsDialogs\FormCreateReleaseNote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CommandsDialogs\FormCreateReleaseNote.Designer.cs">
+      <DependentUpon>FormCreateReleaseNote.cs</DependentUpon>
+    </Compile>
     <Compile Include="CommandsDialogs\FullBleedTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -287,6 +297,12 @@
     </Compile>
     <Compile Include="CommandsDialogs\SettingsDialog\Pages\FormBrowseRepoSettingsPage.Designer.cs">
       <DependentUpon>FormBrowseRepoSettingsPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CommandsDialogs\SettingsDialog\Pages\AlastriSettingsPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CommandsDialogs\SettingsDialog\Pages\AlastriSettingsPage.Designer.cs">
+      <DependentUpon>AlastriSettingsPage.cs</DependentUpon>
     </Compile>
     <Compile Include="CommitInfo\CommitInfoHeader.cs">
       <SubType>UserControl</SubType>
@@ -1174,6 +1190,9 @@
       <DependentUpon>FormUpdates.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="CommandsDialogs\FormCreateReleaseNote.resx">
+      <DependentUpon>FormCreateReleaseNote.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CommandsDialogs\RevisionDiffControl.resx">
       <DependentUpon>RevisionDiffControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -1242,6 +1261,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CommandsDialogs\SettingsDialog\Pages\FormBrowseRepoSettingsPage.resx">
       <DependentUpon>FormBrowseRepoSettingsPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CommandsDialogs\SettingsDialog\Pages\AlastriSettingsPage.resx">
+      <DependentUpon>AlastriSettingsPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CommandsDialogs\SettingsDialog\RepoDistSettingsPage.resx">
       <DependentUpon>RepoDistSettingsPage.cs</DependentUpon>
